Fixing file alignment

--- a/code/media/koowa/com_files/scss/koowa/_files.scss
+++ b/code/media/koowa/com_files/scss/koowa/_files.scss
@@ -1162,8 +1162,7 @@ table th.file-count {
   div.imgTotal a.navigate[class*="koowa_icon--"] {
     &:before {
       position: relative;
-      top: 50%;
-      margin-top: -24px;
+      margin-top: 34px;
     }
   }
   div.imgBorder {
